<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never"
        tools:context=".ui.que2.Que2Activity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_que_2"
                android:textColor="@color/colorAccent"
                android:textSize="26sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textColor="@color/textColorSecondary"
                android:textStyle="bold"
                android:text="@string/msg_select_more_than_one" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cbAnswer1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/rb_que_bg"
                    android:button="@null"
                    android:text="@string/lbl_que2_opt_1" />


                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cbAnswer2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/rb_que_bg"
                    android:button="@null"
                    android:text="@string/lbl_que2_opt_2" />


                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cbAnswer3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/rb_que_bg"
                    android:button="@null"
                    android:text="@string/lbl_que2_opt_3" />


                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cbAnswer4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/rb_que_bg"
                    android:button="@null"
                    android:text="@string/lbl_que2_opt_4" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_gravity="center_horizontal"
                app:backgroundTint="@color/colorAccent"
                android:src="@drawable/ic_right_arrow"
                app:tint="@android:color/white" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>