<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never"
        tools:context=".ui.que1.Que1Activity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_que_1"
                android:textColor="@color/colorAccent"
                android:textSize="26sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textColor="@color/textColorSecondary"
                android:textStyle="bold"
                android:text="@string/msg_select_any_one" />

            <RadioGroup
                android:id="@+id/rgAnswers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp">


                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rbAnswer1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rb_que_bg"
                    android:button="@null"
                    android:text="@string/lbl_que_opt_1" />


                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rbAnswer2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/rb_que_bg"
                    android:button="@null"
                    android:text="@string/lbl_que_opt_2" />


                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rbAnswer3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/rb_que_bg"
                    android:button="@null"
                    android:text="@string/lbl_que_opt_3" />


                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rbAnswer4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/rb_que_bg"
                    android:button="@null"
                    android:text="@string/lbl_que_opt_4" />

            </RadioGroup>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_gravity="center_horizontal"
                app:backgroundTint="@color/colorAccent"
                android:src="@drawable/ic_right_arrow"
                app:tint="@android:color/white" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>